@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-07T02:21:43Z",
+  "timestamp" : "2022-07-07T16:37:26Z",
   "count_outdated" : 650,
   "uniques_outdated" : 337,
   "count" : 684,
-  "uniques" : 355,
+  "uniques" : 356,
   "clones" : [
     {
       "timestamp": "2022-06-23T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-07-06T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
